@@ -7,6 +7,7 @@ Distributed under the GPL v3
 - Fixed a crash if a title is missing
 - "--latestepisode" was sometimes selecting a wrong episode
 - Improved retry on very long and slow downloads
+- Include description as metadata in audio output files
 
 Version 20220704
 
